--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clima</title>
+    <title>Clima - FUNCIONANDO</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <h1>Clima</h1>
 
     <form class="busca">
-        <input type="search" id="searchInput" />
+        <input type="search" id="searchInput" placeholder="cidade..."/>
         <button>Buscar</button>
     </form>
 
@@ -36,7 +36,7 @@
 
     <div class="aviso"></div>
 
-    <footer>Michael Silva</footer>
+    <footer>Confeccionado por Michael</footer>
 
     <script src="script.js"></script>
 </body>
