--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clima - FUNCIONANDO</title>
+    <link rel="icon" 
+    type="image/png" 
+    href="/clima.png" />
+    <title>Clima</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+    crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <h1>Clima</h1>
 
     <form class="busca">
-        <input type="search" id="searchInput" placeholder="cidade..."/>
+        <input type="search" id="searchInput" />
         <button>Buscar</button>
     </form>
 
@@ -21,8 +27,14 @@
         <div class="info">
             <div class="temp">
                 <div class="tempTitulo">Temperatura</div>
-                <div class="tempInfo">-- <sup>ºC</sup></div>
+                <div class="tempInfo">-- <sup>ºC</sup></div>               
+                <div class="minmax">
+                    <p class="tMax">---</p>
+                    <p class="tMin">---</p>                    
+                </div>
+                
                 <img src="http://openweathermap.org/img/wn/10d@2x.png" />
+                <p class="sky">---</p>
             </div>
             <div class="vento">
                 <div class="ventoTitulo">Vento</div>
@@ -30,14 +42,21 @@
                 <div class="ventoArea">
                     <div class="ventoPonto" style="transform: rotate(0deg)"></div>
                 </div>
+                <p class="rosaDoVento">---</p>
             </div>
         </div>
     </div>
 
     <div class="aviso"></div>
+    <div class="spinner-border text-success" role="status">
+        <span class="visually-hidden" stile>Loading...</span>
+      </div>
 
-    <footer>Confeccionado por Michael</footer>
+    <footer>Criado pela B7Web <br> by Michael ☻</footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
+    crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
